<resources>
    <string name="app_name">Business-Card</string>
    <string name="label_business_cards">Cartões de visita</string>
    <string name="label_description_new_card">Novo cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_email">E-mail</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="label_show_success">Registro inserido com sucesso.</string>
    <string name="label_share_to">Compartilhar</string>
    <string name="close">Fechar</string>
    <string name="tel_lbl">Tel:</string>
    <string name="email_lbl">E-mail:</string>
    <string name="fone">Telefone</string>
    <string name="mail">E-mail</string>
    <string name="proximo">Próximo</string>
    <string name="label_desc_infos">Informe seus dados</string>
    <string name="label_design_card">Selecione o layout</string>
    <string name="label_voltar">Voltar</string>
    <string name="label_text_color">Cor do texto</string>
    <string name="label_back_color">Cor de fundo</string>
    <string name="title_color_text">Selecione a cor do texto</string>
    <string name="title_color_back">Selecione a cor de fundo</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="label_selecionar">Selecionar</string>
    <string name="check">Check</string>
    <string name="message_fill_fields">Preencha os campos solicitados</string>
</resources>